--- a/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
+++ b/project_description/new_latex_documentation/msc-docs-template/bibliography.bib
@@ -59,15 +59,13 @@
   year={2005}
 }
 
-@article{szczerba2000robust,
-  title={Robust algorithm for real-time route planning},
-  author={Szczerba, Robert J and Galkowski, Peggy and Glicktein, IS and Ternullo, Noah},
-  journal={IEEE Transactions on Aerospace and Electronic Systems},
-  volume={37},
-  number={3},
-  pages={869--878},
-  year={2000},
-  publisher={IEEE}
+@article{ando2003autonomous,
+  title={An Autonomous Distributed Route Planning Method for Multiple Mobile Robots },
+  author={Ando, Masakazu and Nishi, Tatsushi and Konishi, Masami and Imai, Jun},
+  journal={Transactions of the Society of Instrument and Control Engineers},
+  volume={39},
+  pages={759--766},
+  year={2003}
 }
 
 @article{de1998optimal,
