Improving implementation chapter

--- a/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
@@ -109,3 +109,23 @@ W celu graficznej reprezentacji wyników zaimplementowany został moduł graficz
 \newline
 Działanie modułu graficznego oparte jest na rysowaniu grafów z wykorzystaniem biblioteki Graphviz oraz jej implementacji w języku Ruby.
 \newline
+\newline
+Skrzyżowanie jest reprezentowane za pomocą grafu. Wierzchołkami grafu są poszczególne odcinki dróg. Krawędziami grafu są połączenia pomiędzy odcinkami.
+\newline
+\newline
+Każda droga pomalowana jest na inny kolor.
+\newline
+\newline
+Samochody poruszające się po tej samej drodze są zaznaczone grubszym obwodem oraz mają ten sam kolor. Samochody można rozróżnić poprzez unikalny numer na nich napisany.
+\newline
+\newline
+Kolejne kroki czasowe reprezentowane są poprzez następne grafy z kolejnymi ułożeniami samochodów.
+\newline
+\newline
+Ostatnim elementem modułu graficznego jest stworzenie GIFa z następujących po sobie grafów.
+\newline
+\newline
+Poniżej widać przykład dla dwunastu samochodów na skrzyżowaniu ośmiu dróg.
+\newline
+\newline
+
