--- a/project_description/new_latex_documentation/msc-docs-template/main.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/main.tex
@@ -8,7 +8,7 @@
 \usepackage{blindtext}
 \usepackage{caption}
 \usepackage{color}
-\usepackage[pdftex]{graphicx} \graphicspath{{./plots/}}
+\usepackage[pdftex]{graphicx} \graphicspath{{graphics/}}
 \usepackage{epstopdf} \epstopdfsetup{update} % only regenerate pdf files when eps file is newer
 \usepackage{float} % figure groups aka floats
 \usepackage{forest} % for MFS elimination tree diagram
